# bonfire

./: .env.example  .gitignore  README.md  bonfire.py  pyproject.toml  requirements.txt
bonfire/: __init__.py  bonfire.py
bonfire/config/: example.py
bonfire/data/: intents.jsonl
bonfire/data/templates/: basic.jsonl  logic_bypass.jsonl  role_play.jsonl
bonfire/function/: example.py
bonfire/functions/: example.py
bonfire/utils/: __init__.py  analyze.py  audio.py  augment.py  bon.py  cli.py  decorate.py  encode.py  file.py  file_utils.py  image.py  language.py  logger.py  payload.py  prompt.py  report.py  result.py  reverse.py  sound.py  text.py  validate.py  vision.py  whitespace.py
